package jeu.model;

public class Obstacle extends Carte {

    // Constructeur
    public Obstacle(String nom, int pV) {
        super(nom, pV);
    }
}
